--- a/html-basics.html
+++ b/html-basics.html
@@ -38,9 +38,11 @@
         <p id="footer"></p>
         <h2>Our Charities</h2>
         <h3>25% of all our sales are distributed to the following organizations</h3>
-        <a href="https://www.americanhumane.org/">americanhumae.org</a>
-        <a href="https://www.hopeforthewarriors.org/">hopeforthewarriors.org</a>
-        <a href="https://www.wri.org/">wri.org</a>
+        <ul>
+       <li><a href="https://www.americanhumane.org/">americanhumae.org</a></li>
+        <li><a href="https://www.hopeforthewarriors.org/">hopeforthewarriors.org</a></li>
+        <li><a href="https://www.wri.org/">wri.org</a></li>
+        </ul>
     </footer>
 
 </body>
